--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -17,6 +17,7 @@
   <script src='lib/handlebars-2.0.0.js' type='text/javascript'></script>
   <script src='lib/underscore-min.js' type='text/javascript'></script>
   <script src='lib/backbone-min.js' type='text/javascript'></script>
+  <script src='config.js' type='text/javascript'></script>
   <script src='swagger-ui.js' type='text/javascript'></script>
   <script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
   <script src='lib/marked.js' type='text/javascript'></script>
@@ -30,10 +31,10 @@
   <script type="text/javascript">
     $(function () {
       var url = window.location.search.match(/url=([^&]+)/);
-      if (url && url.length > 1) {
-        url = decodeURIComponent(url[1]);
+      if (typeof config != 'undefined' && config.url != undefined) {
+        url = config.url
       } else {
-        url = "http://petstore.swagger.io/v2/swagger.json";
+        url = "http://localhost:8080/PlatformApi/swagger.json";
       }
 
       // Pre load translate...
@@ -50,7 +51,7 @@
               clientId: "your-client-id",
               clientSecret: "your-client-secret",
               realm: "your-realms",
-              appName: "your-app-name", 
+              appName: "your-app-name",
               scopeSeparator: ","
             });
           }
@@ -63,7 +64,7 @@
             hljs.highlightBlock(e)
           });
 
-          addApiKeyAuthorization();
+//          addApiKeyAuthorization();
         },
         onFailure: function(data) {
           log("Unable to Load SwaggerUI");
@@ -83,6 +84,18 @@
       }
 
       $('#input_apiKey').change(addApiKeyAuthorization);
+
+      $('#input_user, #input_pass').change(function() {
+          var username = $('#input_user')[0].value;
+          var password = $('#input_pass')[0].value;
+
+          if(username && username.trim() != "" && password && password.trim() != "") {
+            var auth = "Basic " + btoa($('#input_user')[0].value + ":" + $('#input_pass')[0].value);
+            swaggerUi.api.clientAuthorizations.add("key", new SwaggerClient.ApiKeyAuthorization("Authorization", auth, "header"));
+          } else {
+            swaggerUi.api.clientAuthorizations.remove("key");
+          }
+      });
 
       // if you have an apiKey you would like to pre-populate on the page for demonstration purposes...
       /*
@@ -104,16 +117,28 @@
 <body class="swagger-section">
 <div id='header'>
   <div class="swagger-ui-wrap">
-    <a id="logo" href="http://swagger.io">swagger</a>
-    <form id='api_selector'>
-      <div class='input'><input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/></div>
-      <div class='input'><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text"/></div>
-      <div class='input'><a id="explore" href="#" data-sw-translate>Explore</a></div>
-    </form>
+    <div id="logo"></div>
   </div>
 </div>
 
 <div id="message-bar" class="swagger-ui-wrap" data-sw-translate>&nbsp;</div>
+<div id="swagger-auth" class="swagger-ui-wrap">
+    <div class="basic-auth">
+        <p>
+        <b>Basic Auth:</b>
+        <form id='api_auth'>
+            <div>
+                <label for="input_user">Username</label>
+                <input type="email" class="form-control" id="input_user" name="user" placeholder="username">
+            </div>
+            <div>
+                <label for="input_pass">Password</label>
+                <input type="password" class="form-control" id="input_pass" name="pass" placeholder="password">
+            </div>
+        </form>
+        </p>
+    </div>
+</div>
 <div id="swagger-ui-container" class="swagger-ui-wrap"></div>
 </body>
 </html>
